Google addresses z-index issue

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -327,3 +327,7 @@ body a:hover
         display: none;
     }
 }
+.pac-container
+{
+    z-index: 10;
+}
